# splunk-hf-autoinstrumentation

./: .gitignore  README.md  Splunk_HF_AutoInstrumentation.docx  docker-compose.yml  pyproject.toml
autoinstrumentation/: __main__.py  agent_manager.py  config.py  daemon.py  discovery.py  injector.py  jvm_attach.py  state.py
bootstrap-agent/: build.sh
bootstrap-agent/src/com/splunk/autoinstr/: BootstrapAgent.java
demo/: docker-compose.yml  run-demo.sh  start-microservices.sh  stop-microservices.sh
splunk-ta-hf-autoinstrumentation/: app.conf  package.sh
splunk-ta-hf-autoinstrumentation/README/: inputs.conf.spec
splunk-ta-hf-autoinstrumentation/default/: inputs.conf
tests/: test_discovery.py  test_injector.py  test_state.py
